--- a/sass/components/_experience-box.scss
+++ b/sass/components/_experience-box.scss
@@ -3,6 +3,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-content: space-around;
     //width: 130rem;
     margin: 0 auto;
 
@@ -15,6 +16,10 @@
         
         //width: 80rem;
         }
+
+        @media only screen and (max-width: $bp-small) {
+        width: 25rem;
+    }
     
 }
 
@@ -24,8 +29,9 @@
     font-size: 1.5rem;
     padding: 0 1.5rem;
     text-align: center;
+    
     border-radius: 3px;
-    margin: 0 auto;
+    //margin: 0 auto;
     margin-bottom: 4rem;
 
     @media only screen and (max-width: $bp-med-large) {
@@ -34,6 +40,10 @@
 
     @media only screen and (max-width: $bp-medium) {
         width: 50rem;
+    }
+    @media only screen and (max-width: $bp-small) {
+        width: 25rem;
+        font-size: 1.4rem;
     }
     
     &__icon {
